# cosnarks-zksaas-blueprint

./: Cargo.toml  Dockerfile  README.md  remappings.txt
contracts/src/: BlueprintServiceManager.sol  IVerifier.sol
cosnarks-zksaas-blueprint-bin/: Cargo.toml  build.rs
cosnarks-zksaas-blueprint-bin/src/: main.rs
cosnarks-zksaas-blueprint-lib/: Cargo.toml
cosnarks-zksaas-blueprint-lib/src/: context.rs  error.rs  lib.rs  network.rs  state.rs  types.rs
cosnarks-zksaas-blueprint-lib/src/jobs/: generate_proof.rs  mod.rs  register_circuit.rs
cosnarks-zksaas-blueprint-lib/src/p2p/: mod.rs
cosnarks-zksaas-blueprint-lib/tests/: e2e.rs
