[package]
name = "cosnarks-zksaas-blueprint-bin"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
cosnarks-zksaas-blueprint-lib = { workspace = true }

blueprint-sdk = { workspace = true, features = ["std", "macros", "tangle", "evm"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tower.workspace = true
rcgen = { workspace = true }
color-eyre = { workspace = true }

[build-dependencies]
blueprint-sdk = { workspace = true, features = ["macros", "build", "tangle"] }
cosnarks-zksaas-blueprint-lib = { workspace = true }

[[bin]]
name = "cosnarks-zksaas-blueprint"
path = "src/main.rs"

# TODO: Not yet supported by blueprint-manager: https://github.com/tangle-network/blueprint/issues/730
#[[package.metadata.gadget.Native.sources]]
#owner = "tangle-network"
#repo = "cosnarks-zksaas-blueprint"
#tag = "0.1.0"
#binaries = [
#    { arch = "Amd64", os = "Linux", name = "amd64-linux-cosnarks-zksaas-blueprint-gadget" },
#    { arch = "Arm64", os = "Linux", name = "arm64-linux-cosnarks-zksaas-blueprint-gadget" },
#]
