[package]
name = "cosnarks-zksaas-blueprint-lib"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros", "networking", "evm", "round-based-compat"] }
round-based = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
libp2p = { workspace = true }

# coSNARK Dependencies
co-circom = { workspace = true, optional = true }
circom-mpc-vm = { workspace = true, optional = true }
circom-mpc-compiler = { workspace = true, optional = true }
circom-types = { workspace = true, optional = true }
co-groth16 = { workspace = true, optional = true }
co-plonk = { workspace = true, optional = true }
co-circom-snarks = { workspace = true, optional = true }
co-noir = { workspace = true, optional = true }
co-acvm = { workspace = true, optional = true }
co-brillig = { workspace = true, optional = true }
co-builder = { workspace = true, optional = true }
co-ultrahonk = { workspace = true, optional = true }
ultrahonk = { workspace = true, optional = true }
mpc-core = { workspace = true }
mpc-net = { workspace = true }
acir = { git = "https://github.com/noir-lang/noir", package = "acir", tag = "v0.31.0", optional = true } # Example: dependency for Noir ACIR types

# Networking & Async
futures = { workspace = true }
crossbeam-channel = { workspace = true }

# State Management
sled = { workspace = true }
tempfile = { workspace = true }

# Serialization & Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
bytes = "1.5"
toml = "0.8"

# Cryptography & Utilities
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.4.0", default-features = false, optional = true }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
rand = "0.8"

# Error Handling
thiserror = "1.0"
color-eyre = "0.6"

# Configuration & Paths
serde_with = { version = "3", default-features = false, features = ["macros"] }
path-absolutize = { version = "3.1.1", default-features = false }
url = { version = "2.5.0", features = ["serde"] }

# New dependencies
rustls = { version = "0.22" }
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }

# Added tracing dependency
tracing = "0.1.37"

# Added reqwest dependency
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
round-based = { workspace = true, features = ["derive", "sim"] }
blueprint-sdk = { workspace = true, features = [
    "std",
    "testing",
    "tangle",
    "macros",
    "networking",
    "evm",
    "round-based-compat",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"


[features]
default = ["circom", "noir", "groth16"]
circom = ["dep:co-circom", "dep:circom-mpc-vm", "dep:circom-mpc-compiler", "dep:circom-types", "dep:co-circom-snarks"]
noir = [
    "dep:co-noir",
    "dep:co-acvm",
    "dep:co-brillig",
    "dep:co-builder",
    "dep:co-ultrahonk",
    "dep:ultrahonk",
    "dep:acir",
]
groth16 = ["dep:co-groth16", "dep:ark-groth16"]
plonk = ["dep:co-plonk"] # Add Plonk related ark deps if needed
ultrahonk = ["dep:co-ultrahonk"] # Add UltraHonk related ark deps if needed
